Add search item to res menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="label_post_author">Author</string>
     <string name="label_create_post">Create post</string>
     <string name="label_creating_post">Creating post</string>
+    <string name="search">Search</string>
 
 </resources>
