--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,7 @@
     <string name="label_create_post">Create post</string>
     <string name="label_creating_post">Creating post</string>
     <string name="search">Search</string>
+    <string name="topics">Topics</string>
+    <string name="users">Users</string>
 
 </resources>
