--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,9 @@
     <string name="badges">Badges</string>
     <string name="moderator">Mod</string>
     <string name="user">User</string>
+    <string name="created">created</string>
+    <string name="replies">replies</string>
+    <string name="gived">gived</string>
+    <string name="received">received</string>
 
 </resources>
